# anno-production-chain-renderer

./: .gitignore  LICENSE  README.md  index.html  package.json  quasar.config.js  stats.html  tsconfig.json
.github/workflows/: deploy-gh-pages.yml
.github/workflows-storage/: deploy-gh-pages.yml
assets/: AnnoBase.90f26f33.css  AnnoBase.9a8656bd.js  AnnoExpansions.470638bd.js  AnnoExpansions.bd4a1fb7.css  ErrorNotFound.9f314fa3.js  MainLayout.079d5192.js  MainLayout.f1647740.css  QBtn.5b1a0dab.js  QItem.e002f3b4.js  index.a54d42aa.js  index.dd9a369c.css  info-card.61bd2ca5.js  info-card.ae36af54.css  use-router-link.c58e2b9b.js
docs/: blank_col.md  boilerplate_production_chains.md  component-data-vetur.md  new_page.md  scaling_down_greater_than_one.md  scaling_gas.md  todo.md  todo.todo
src/: App.vue
src/boot/: mermaid.ts
src/components/: ChainTiers.vue  DiagramRenderer.vue  EssentialLink.vue  InfoCard.vue  InfoCardBase.vue  InfoCardExpansions.vue  ProductionChain.vue  ProductionChainMultiplier.vue  models.ts  production-chains.ts
src/components/InfoCard/: InfoCardItem.vue  InfoCardItemWorldIcon.vue
src/components/info_card/: InfoCardItem.vue  InfoCardItemWorld.vue
src/composables/: mermaid.ts
src/css/: app.scss  mermaid.scss  quasar.variables.scss  rubik-font.scss
src/layouts/: MainLayout.vue
src/layouts/data/: linksList.json
src/pages/: AnnoBase.vue  AnnoExpansions.vue  AnnoMisc.vue  AnnoSeason1.vue  AnnoSeason2.vue  AnnoSeason3.vue  AnnoSeason4.vue  IndexPage.vue
src/router/: routes.ts
utils/: README.md  pyproject.toml  screenshot.py
(+10 files in other folders)
