[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Daniel Tomlinson <dtomlinson@panaetius.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.5.0"
webdriver-manager = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
